# HarmonyBilibili

./: README.md  buglist.md  build-profile.json5  changeList.md  oh-package-lock.json5  oh-package.json5  性能优化.md  知识点记录.md
AppScope/: app.json5
AppScope/resources/base/element/: string.json
Loading/: index.ets  oh-package.json5
Loading/src/main/: module.json5
Loading/src/main/ets/: LoadingOption.ts
Loading/src/main/ets/loadingability/: LoadingAbility.ts
Loading/src/main/ets/pages/: Index.ets  Index1.ets  Index2.ets  Loading.ets  Page.ets  Page1.ets  RefreshList.ets  SwipeRefreshLayout.ets  SwipeRefreshList.ets
Loading/src/main/resources/base/element/: string.json
Loading/src/main/resources/base/profile/: main_pages.json
Loading/src/main/resources/zh_CN/element/: string.json
Loading/src/ohosTest/: module.json5
entry/: build-profile.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/ets/Utils/: DialogUtil.ets  Style.ets  ToastUtils.ets  Utils.ets  Utils.ts  WbiUtils.ts
entry/src/main/ets/bean/: BaseResponse.ts  CommentsInfo.ets  DefinitionBean.ts  Dimension.ts  HomeBean.ts  HomeSearchBean.ts  MediaStat.ts  Online.ts  Owner.ts  PageListBean.ts  PlayVideoBean.ts  SearchArticleBean.ets  SearchArticleBean.ts  SearchBaseBean.ts  SearchBiliUserBean.ts  SearchDefaultBean.ts  SearchDetailsBean.ts  SearchHotBean.ts  SearchLiveRoomBean.ets  SearchLiveRoomBean.ts  SearchMediaBangumiBean.ts  SearchMediaFtBean.ts  SearchSuggestBean.ets  SearchSuggestBean.ts  SearchVideoBean.ts  Stat.ts
entry/src/main/ets/bean/Live/: LiveBean.ts
entry/src/main/ets/common/: Color.ts  Constants.ts  DisplayInfo.ts  IjkPlayer.ets  JLog.ts  LoadingStatus.ets  PageManager.ts  PlayStatus.ets  RefreshList.ets  SearchRequest.ets  SearchType.ts  StorageManager.ts  WebConstants.ts
entry/src/main/ets/component/: Failure.ets  HomeSearch.ets  IconTab.ets  ListFooter.ets  Loading.ets  LoadingComponent.ets  LoadingData.ets  NoData.ets  SearchArticle.ets  SearchBiliUser.ets  SearchDefault.ets  SearchDetails.ets  SearchHeader.ets  SearchLiving.ets  SearchMediaBangumi.ets  SearchMediaFt.ets  SearchSuggest.ets  SearchTabsAll.ets  SearchTabsAll1.ets  SearchVideo.ets  TabBuilder.ets  VideoPlay.ets  VolumeBrightness.ets  WebView.ets  commontest.ets
entry/src/main/ets/datasource/: AllData.ets  ArticleData.ets  BasicDataSource.ets  BiliUserData.ets  CommentsData.ets  HomeData.ets  HotSearchData.ets  LivingData.ets  MediaBangumiData.ets  MediaEpsData.ets  MediaFtData.ets  MediaSeasonData.ets  SearchMediaData.ets  UserBangumiData.ets  UserBookmarkData.ets  UserVideoData.ets  VideoData.ets  VideoPageData.ets  VideoRecommendData.ets
entry/src/main/ets/entryability/: EntryAbility.ts
entry/src/main/ets/net/: Api.ts  ApiBase.ts  ApiBiliUser.ts  ApiCollect.ts  ApiConstants.ts  ApiDynamic.ts  ApiHistory.ts  ApiLiving.ts  ApiLogin.ts  ApiMedia.ts  ApiMediaBangumi.ts  ApiMediaFt.ts  ApiVideo.ts  NetEncryption.ts
entry/src/main/ets/pages/: BiliComments.ets  DetailPage.ets  HomePage.ets  HomePage1.ets  HomePage2.ets  Index.ets  MinePage.ets  MomentPage.ets  NewPage.ets  SearchCompletePage.ets  SearchHotPage.ets  SearchPage.ets  SearchPage1.ets  SearchWebPage.ets  ShoppingPage.ets  SplashPage.ets  Test.ets  TestPage.ets  VideoDetailPage.ets
entry/src/main/ets/viewModel/: BaseViewModel.ets  CommentsViewModel.ets  IPlayer.ts  MineViewModel.ets  VideoModel.ets  VideoViewModel.ets
entry/src/ohosTest/: module.json5
hvigor/: hvigor-config.json5
ijkplayer/: .gitignore  build-profile.json5  index.ets  oh-package.json5
ijkplayer/src/main/: module.json5
ijkplayer/src/main/cpp/: CMakeLists.txt
ijkplayer/src/main/cpp/ijkplayer/: CMakeLists.txt  ff_ffinc.h  ff_ffmsg_queue.h  ff_ffpipeline.h  ff_ffpipenode.c  ff_ffpipenode.h  ff_ffplay.c  ff_ffplay_def.h  ijkmeta.c  ijkplayer.c  ijkplayer.h  ijkplayer_android.c  ijkplayer_android.h  ijkplayer_internal.h
ijkplayer/src/main/cpp/ijkplayer/ijkavformat/: allformats.c  ijkioapplication.h  ijkiourl.h
ijkplayer/src/main/cpp/ijkplayer/pipeline/: ffpipeline_android.c  ffpipeline_android.h
ijkplayer/src/main/cpp/ijksdl/: CMakeLists.txt  config.h  ijksdl_android.h  ijksdl_aout.c  ijksdl_aout.h  ijksdl_egl.c  ijksdl_egl.h  ijksdl_extra_log.c  ijksdl_extra_log.h  ijksdl_gles2.h  ijksdl_inc_internal_android.h  ijksdl_log.h  ijksdl_mutex.c  ijksdl_thread.c  ijksdl_vout.c
ijkplayer/src/main/cpp/ijksdl/audio/: ijksdl_aout_android_opensles.c
ijkplayer/src/main/cpp/ijksdl/ffmpeg/: ijksdl_vout_overlay_ffmpeg.c
ijkplayer/src/main/cpp/ijksdl/ffmpeg/abi_all/: image_convert.c
ijkplayer/src/main/cpp/ijksdl/video/: ijksdl_vout_android_nativewindow.c  ijksdl_vout_android_nativewindow.h  ijksdl_vout_android_surface.c  ijksdl_vout_android_surface.h
ijkplayer/src/main/cpp/ijksdl/video/gles2/: internal.h  renderer.c  renderer_rgb.c  renderer_yuv420p.c  renderer_yuv420sp.c  renderer_yuv444p10le.c
ijkplayer/src/main/cpp/ijksdl/video/gles2/fsh/: rgb.fsh.c  yuv420p.fsh.c  yuv420sp.fsh.c  yuv444p10le.fsh.c
ijkplayer/src/main/cpp/ijksdl/video/gles2/vsh/: mvp.vsh.c
ijkplayer/src/main/cpp/napi/: ijkplayer_napi.cpp  ijkplayer_napi.h  ijkplayer_napi_init.cpp  ijkplayer_napi_manager.cpp  ijkplayer_napi_manager.h
ijkplayer/src/main/cpp/proxy/: ijkplayer_napi_proxy.cpp  ijkplayer_napi_proxy.h
ijkplayer/src/main/cpp/utils/ffmpeg/: custom_ffmpeg_log.c  custom_ffmpeg_log.h
ijkplayer/src/main/cpp/utils/hashmap/: data_struct.c  data_struct.h
ijkplayer/src/main/cpp/utils/napi/: napi_utils.cpp
ijkplayer/src/main/cpp/utils/ohoslog/: ohos_log.cpp  ohos_log.h
ijkplayer/src/main/cpp/utils/opensles/: OpenSLES_OpenHarmony.h
ijkplayer/src/main/ets/ijkplayer/: IjkMediaPlayer.ets
player/: build-profile.json5  oh-package.json5
player/src/main/: module.json5
player/src/main/ets/: IPlayer.ts  VideoModel.ets  VideoViewModel.ets
player/src/main/ets/common/: IjkPlayer.ets  Orientation.ts
player/src/main/ets/component/: VideoPlay.ets
player/src/main/ets/pages/: Index.ets
player/src/main/ets/playerability/: PlayerAbility.ts
player/src/ohosTest/: module.json5
(+91 files in other folders)
